--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
+    ext.coroutinerVer = "1.1.1"
     repositories {
         google()
         jcenter()
