--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
 //    Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinerVer"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinerVer"
+
+    implementation "com.github.bumptech.glide:glide:4.9.0"
 }
