--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,14 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
+apply plugin: 'kotlin-android-extensions'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
     defaultConfig {
         applicationId "com.shashankpednekar.imagepickercompression"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -20,15 +22,17 @@ android {
         }
     }
 
+    viewBinding {
+        enabled true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
-        jvmTarget = '1.8'
-    }
-    buildFeatures {
-        viewBinding true
+        jvmTarget = "1.8"
     }
 }
 
@@ -46,5 +50,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinerVer"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinerVer"
 
-    implementation "com.github.bumptech.glide:glide:4.11.0"
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+    implementation 'androidx.activity:activity-ktx:1.3.0-alpha02'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
 }
